--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,111 @@
+h1, h3, p, a {
+    font-family: "Helvetica", "Arial";
+}
+h1 {
+    font-size: 24px;
+    margin-top: 0px;
+    color: #54bfb3;
+}
+h3, p {
+    font-size: 16px;
+    line-height: 6px;
+}
+
 .top-container {
     grid-area: top-area;
+    padding: 30px;
+    padding-bottom: 0;
+}
+
+.secondary-heading-top {
+    color: #c2e667;
+    margin-top: 25px;
+}
+.text {
+    color: #c9c9c9;
+    margin-top: 25px;
 }
 
 .bottom {
     grid-area: bottom;
     display: flex;
     flex-direction: row;
-    align-content: stretch;
-    justify-content: stretch;
-
+    justify-content: center;
 }
 
 .bottom-left-container {
     background: #54bfb3;
-    width: 300px;
     border-bottom-left-radius: 10px;
+    padding: 30px;
+    padding-left: 35px;
+    width: 50%;
 }
-.bottom-right-container {
+
+.bottom-right-container {  
     background: #75d9ce;
-    width: 300px;
     border-bottom-right-radius: 10px;
+    padding: 30px;
+    padding-left: 35px;
+    width: 50%;
+}
+
+.secondary-heading-bottom {
+    color: #ededed;
+}
+.price {
+    margin-top: 30px;
+    color: #ededed;
+}
+.fade-out {
+    font-size: 12px;
+    color: #d9d9d9;
+    opacity: 0.5;
+}
+.bottom-text {
+    font-size: 14px;
+    color: #ededed;
+}
+.sign-up-container {
+    text-align: center;
+    margin-top: 50px;
+    
+}
+.sign-up {
+    display: block;
+    text-decoration: none;
+    color: #ededed;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 0 auto;
+    background: #c2e667;
+    
+    -webkit-box-shadow: -2px -1px 33px -9px rgba(0,0,0,0.41);
+    -moz-box-shadow: -2px -1px 33px -9px rgba(0,0,0,0.41);
+    box-shadow: -2px -1px 33px -9px rgba(0,0,0,0.41);
+
+    transition: 0.4s;
+}
+.sign-up:hover {
+    background: #abc95d;
+}
+
+.secondary-heading-bottom {
+    margin-bottom: 30px;
+}
+.fade-out-light {
+    font-size: 12px;
+    color: #ededed;
+    opacity: 0.6;
+    line-height: 10px;
 }
 
 .view-container {
     display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-columns: max-content;
     width: 600px;
-    height: 600px;
+    height: 500px;
     grid-template-areas: "top-area top-area"
                          "bottom bottom";
     -webkit-box-shadow: -2px -1px 33px -9px rgba(0,0,0,0.41);
